assets/css/navbar.css
.navbar-fixed {
  position: fixed;
  width: 100%;
  top: 0;
  left: 0;
  right: 0;
  z-index: 100;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background: var(--body-color);
  color: var(--text-color);
  padding: 1rem 10rem;
  border-bottom: 2px solid var(--text-color);
}
.navbar-elements {
  display: flex;
  align-items: center;
  justify-content: space-between;
  column-gap: 1.5rem;
}
.navbar-links,
.theme {
  display: flex;
  align-items: center;
  justify-content: space-between;
  column-gap: 1.5rem;
}

@media screen and (max-width: 1400px) {
  .navbar-links {
    column-gap: 0.75rem;
  }
}

@media screen and (max-width: 992px) {
  .navbar-fixed {
    padding: 1rem 1.5rem;
  }
  .navbar-fixed img {
    transform: scale(0.7);
  }
  .navbar-links button {
    font-weight: 500;
  }
}

@media screen and (max-width: 768px) {
  .navbar-fixed {
    padding: 0 1rem;
  }
  .navbar-elements {
    background: var(--body-color);
    color: var(--text-color);
    position: fixed;
    padding: 1rem;
    z-index: 50;
    top: -50%;
    right: 0;
    width: 100%;
    column-gap: 0;
    align-items: flex-start;
  }
  .show-navbar-elements {
    top: 80px;
  }
  .navbar-links {
    flex-direction: column;
    align-items: flex-start;
    row-gap: 1rem;
  }
}

